# Project-Hex-MALAYAN

./: README.md  hexapod.py
brainsr/: package.xml  setup.cfg  setup.py
brainsr/brainsr/: brain_node.py
camera_servo_pkg/: package.xml  setup.cfg  setup.py
camera_servo_pkg/camera_servo_pkg/: camera_servo.py
communication/: package.xml  setup.cfg  setup.py
communication/communication/: communication_node.py
communication_package/: package.xml
communication_package/launch/: communication_node.launch
communication_package/src/: communication_noce.py
gait_control_package/: package.xml
gait_control_package/launch/: gait_movement.launch
gait_control_package/src/: gait_movement_node.py
hexapod_bringup/: CMakeLists.txt  package.xml
hexapod_bringup/config/: sensor_config.yaml  servo_config.yaml
hexapod_bringup/launch/: complete_robot.launch.py  control.launch.py  hardware.launch.py
hexapod_control/: CMakeLists.txt  package.xml
hexapod_control/include/hexapod_control/: locomotion_controller.hpp  path_planner.hpp  state_machine.hpp
hexapod_control/src/: locomotion_controller.cpp  path_planner.cpp  state_machine.cpp
hexapod_control_pkg/: package.xml  setup.cfg  setup.py
hexapod_control_pkg/hexapod_control_pkg/: gait_controller.py  servo_controller.py
hexapod_hardware/: CMakeLists.txt  package.xml
hexapod_hardware/include/hexapod_hardware/: camera_interface.hpp  gps_interface.hpp  imu_interface.hpp  lidar_interface.hpp  servo_controller.hpp
hexapod_hardware/src/: camera_interface.cpp  gps_interface.cpp  imu_interface.cpp  lidar_interface.cpp  servo_controller.cpp
hexapod_interfaces/: CMakeLists.txt  package.xml
hexapod_interfaces/msg/: DetectionResult.msg  HealthStatus.msg  JointCommand.msg  RobotState.msg
hexapod_interfaces/srv/: EmergencyStop.srv  SetMode.srv
hexapod_perception/: CMakeLists.txt  package.xml
hexapod_perception/hexapod_perception/: object_detection.py  sensor_fusion.py
hexapod_perception/scripts/: py_node.py
hexapod_perception/src/: health_monitor.cpp  sensor_fusion_node.cpp
image_package/: package.xml
image_package/config/: image_recognition_params.yaml
image_package/launch/: image_recognition.launch
image_package/src/: image_node.py
launchfile/: package.xml
launchfile/launch/: srrobot.launch.py
lidar_packages/: CMake.txt
lidar_packages/config/: lidar_params.yaml
lidar_packages/launch/: lidar_listner.launch
lidar_packages/src/: lidar_listner.py
master_pkg/: package.xml  setup.cfg  setup.py
master_pkg/master_pkg/: master_node.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: hexa_malayan.launch.py  number_app.launch.py  radio.launch.py  slam_toolbox.launch.py  turtle_catch_them_all.launch.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/action/: MoveSequence.action  NavigateHuman.action
my_robot_interfaces/msg/: HardwareStatus.msg  LegCommand.msg  Turtle.msg
navigation/: package.xml  setup.py
navigation/navigation/: navigation_node.py
navigation_pkg/: package.xml  setup.py
navigation_pkg/navigation_pkg/: obstacle_avoidance.py  path_planning.py
path_planning_package/launch/: path_planning.launch
path_planning_package/src/: path_planning_node.py
perceptionSR/: package.xml  setup.cfg  setup.py
perceptionSR/perceptionSR/: perception_node.py  sensor_input_node.py
perception_pkg/: package.xml  setup.cfg  setup.py
perception_pkg/perception_pkg/: lidar_processing.py
