<?xml version="1.0"?>
<package format="2">
  <name>communication_package</name>
  <version>0.1.0</version>
  <description>A ROS package for communication between nodes</description>

  <!-- Maintainer information -->
  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>

  <!-- License information -->
  <license>MIT</license>

  <!-- ROS dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- Add any other build dependencies your package requires -->

  <!-- Run-time dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- Add any other run-time dependencies your package requires -->

  <!-- Optional dependencies -->
  <!-- <depend>package_name</depend> -->

  <!-- Other dependencies -->
  <!-- <depend>other_package</depend> -->
</package>
