<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launchfile</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="varun@todo.todo">varun</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>brain</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>turtlesim_catch_them_all</exec_depend>
  <exec_depend>my_py_pkg</exec_depend>
  <exec_depend>my_cpp_pkg</exec_depend>
  <exec_depend>robot_news_station</exec_depend>
  <exec_depend>smartphone</exec_depend>
  <exec_depend>brainsr</exec_depend>
  <exec_depend>perceptionSR</exec_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>communication</exec_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
